--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@angular/service-worker": "~13.2.0",
     "@angular/youtube-player": "^13.3.7",
     "bootstrap": "^4.6.1",
+    "http-server": "^14.1.1",
     "jquery": "^3.5.1",
+    "npm": "^8.11.0",
     "popper": "^1.0.1",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.4.13",
